# smelly-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.md  output.html  script.py  setup.cfg  setup.py  test_local.json  test_local_more_types.json
.github/workflows/: push.yml  release.yml
smelly_python/: code_smell.py  command_line.py
smelly_python/generator/: md_generator.py  pylint_explanation_fetcher.py  webpage_generator.py
smelly_python/resources/: highlight.min.js  prism.css  prism.js  script.js  style.css
test/: code_smell_with_smells.py  code_smell_with_style_errors.py  test.json
