[metadata]
name= Smelly Python 
version= 1.0.0
author=Hana Jirovska, Sara Juhosova, Wouter Polet, Cedric Willekens
email= smelly.python@gmail.com
description= A python code smell reporting tool
long_description= file: README.md
url= https://github.com/smelly-python/smelly-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
install_requires=
    dominate>="2.6.0"
packages=find: 
include_package_data = True
[options.entry_points]
console_scripts =
    smelly-python = smelly_python.command_line:main
